[package]
name = "lane"
version = "0.1.0"
edition = "2021"
description = "A command to quickly show/set/clear proxies/mirrors for different programs"
license = "AGPL-3.0"
documentation = "https://github.com/CliffHan/lane"
homepage = "https://github.com/CliffHan/lane"
repository = "https://github.com/CliffHan/lane"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["cargo", "derive"] }
dirs = "4.0"
env_logger = "0.9"
git-config = "0.5"
java-properties = "1.4"
log = "0.4"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
thiserror = "1.0"
toml = "0.5"
trace = "0.1"
url = "2.2"

# refer to https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
